--- a/cdn_sdk/cdn_sdk/build.gradle
+++ b/cdn_sdk/cdn_sdk/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 1014424
+        versionName "1.14.424"
     }
     buildTypes {
         release {
