--- a/cdn_sdk/cdn_sdk/build.gradle
+++ b/cdn_sdk/cdn_sdk/build.gradle
@@ -1,8 +1,17 @@
 apply plugin: 'com.android.library'
 
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+    }
+}
+
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc3"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 9
@@ -20,4 +29,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name: 'exoplayer', ext: 'aar')
 }
