--- a/exoplayerdemo/build.gradle
+++ b/exoplayerdemo/build.gradle
@@ -22,6 +22,17 @@ allprojects {
     }
 }
 
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.novoda:bintray-release:0.3.4'
+    }
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
@@ -43,6 +54,6 @@ android {
 }
 
 dependencies {
-    compile project(':library')
+    compile(name: 'exoplayer', ext: 'aar')
     compile(name: 'cdn_sdk', ext: 'aar')
 }
