add support for disabled CDN mode

--- a/exoplayerdemo/.gitignore
+++ b/exoplayerdemo/.gitignore
@@ -1,8 +1,13 @@
 *.iml
-.gradle
+.gradle/
+gradle/
+gradlew
+gradlew.bat
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
+/build
 /buildout
 /captures
+.idea
