--- a/holacdndemo/app/build.gradle
+++ b/holacdndemo/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc3"
+    buildToolsVersion "24.0.0"
     defaultConfig {
         applicationId "org.hola.holacdndemo"
         minSdkVersion 19
@@ -30,7 +30,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
