--- a/hola_player/holaplayer/build.gradle
+++ b/hola_player/holaplayer/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 27
     buildToolsVersion "26.0.2"
 
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
-
+        versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -25,6 +23,10 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.exoplayer:exoplayer:r2.5.4'
-    compile 'com.google.android.exoplayer:extension-ima:r2.5.4'
+    compile 'com.google.android.exoplayer:exoplayer:2.6.0'
+    compile 'com.google.android.exoplayer:extension-ima:2.6.0'
+    compile 'net.protyposis.android.spectaculum:spectaculum:1.3.0'
+    compile 'net.protyposis.android.spectaculum:spectaculum-effect-immersive:1.3.0'
+    compile 'com.android.volley:volley:1.1.0'
+    compile 'com.android.support:design:27.0.2'
 }
